// Spider Sense: a local-development observability tool built on OpenTelemetry and Spider Silk.
//
// Versions every subproject shares are named here once; a subproject's
// build.gradle states only what is its own.
import net.ltgt.gradle.errorprone.CheckSeverity

plugins {
    id 'base'
    id 'net.ltgt.errorprone' version '5.1.1' apply false
}

ext {
    spiderSilkVersion = '1.1.0'
    otelAgentVersion = '2.31.1'          // io.opentelemetry.javaagent:opentelemetry-javaagent
    otelSdkVersion = '1.65.0'            // io.opentelemetry:opentelemetry-sdk, the version that agent bundles
    otelProtoVersion = '1.11.0-alpha'    // io.opentelemetry.proto:opentelemetry-proto
    junitVersion = '6.1.3'
    assertjVersion = '3.27.7'
    h2Version = '2.5.250'
    testcontainersVersion = '2.0.5'     // org.testcontainers:testcontainers-*, DatabaseCatalogIT only
    postgresqlVersion = '42.7.13'       // org.postgresql:postgresql, DatabaseCatalogIT only
    mysqlConnectorVersion = '9.7.0'     // com.mysql:mysql-connector-j, DatabaseCatalogIT only
    springJdbcVersion = '7.0.9'
    springBootVersion = '4.1.1'
    tomcatVersion = '11.0.26'            // org.apache.tomcat.embed:tomcat-embed-core, org.apache.tomcat:tomcat-jdbc
    hikariVersion = '7.1.0'
    logbackVersion = '1.5.38'
    errorProneVersion = '2.50.0'        // com.google.errorprone:error_prone_core
    nullAwayVersion = '0.14.1'          // com.uber.nullaway:nullaway
    jspecifyVersion = '1.0.1'           // org.jspecify:jspecify
}

subprojects {
    repositories {
        mavenCentral()
    }

    plugins.withId('java') {
        apply plugin: 'net.ltgt.errorprone'

        java {
            sourceCompatibility = JavaVersion.VERSION_21
            targetCompatibility = JavaVersion.VERSION_21
        }

        // Error Prone runs inside javac on every module, and NullAway with it:
        // every main package is @NullMarked (a package-info.java per package),
        // so a null that reaches a non-@Nullable type is a compile error, and
        // the JSpecify annotations are how the code says where null is allowed.
        // compileOnly, not implementation: the annotations are read at compile
        // time and nothing needs them at run time, so the launcher jar stays
        // dependency-free and the nested jars ship nothing extra.
        dependencies {
            compileOnly "org.jspecify:jspecify:${rootProject.ext.jspecifyVersion}"
            errorprone "com.google.errorprone:error_prone_core:${rootProject.ext.errorProneVersion}"
            errorprone "com.uber.nullaway:nullaway:${rootProject.ext.nullAwayVersion}"
        }

        tasks.withType(JavaCompile).configureEach {
            options.release = 21
            options.encoding = 'UTF-8'
            // Sources the build generates (jte's precompiled templates carry no
            // @Generated) are not this project's to fix.
            options.errorprone.excludedPaths = '.*/build/generated.*'
        }

        tasks.named('compileJava', JavaCompile) {
            options.errorprone {
                check('NullAway', CheckSeverity.ERROR)
                option('NullAway:OnlyNullMarked', 'true')
                option('NullAway:JSpecifyMode', 'true')
            }
        }

        // Tests pass null on purpose to check the guards, so only main code is held to it.
        tasks.withType(JavaCompile).matching { it.name != 'compileJava' }.configureEach {
            options.errorprone.disable('NullAway')
        }
        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            testLogging {
                events 'failed'
                exceptionFormat 'full'
            }
        }
    }
}

// spider-sense-gradle-plugin is an included build (see settings.gradle), not a
// subproject, so the root's lifecycle tasks would pass it by; these delegates
// keep `gradlew build`, `publishToMavenLocal`, and the staging publish the
// release workflow runs covering it too.
tasks.named('build') {
    dependsOn gradle.includedBuild('spider-sense-gradle-plugin').task(':build')
}
tasks.register('publishToMavenLocal') {
    dependsOn gradle.includedBuild('spider-sense-gradle-plugin').task(':publishToMavenLocal')
}
tasks.register('publishAllPublicationsToStagingRepository') {
    dependsOn gradle.includedBuild('spider-sense-gradle-plugin').task(':publishAllPublicationsToStagingRepository')
}

// A release reaches Maven Central as one bundle: the jar and the plugin publish
// signed into this directory, and the zip of it is uploaded to the Central
// Portal as a single deployment (see RELEASING.md).
def stagingRepository = layout.buildDirectory.dir('staging-deploy')

// Run on its own, before centralBundle: nothing orders a task in this build
// against the included plugin build's publish, so one invocation could delete
// what the other has just written.
tasks.register('cleanStagingRepository', Delete) {
    delete stagingRepository
}

tasks.register('centralBundle', Zip) {
    // Resolved when the task graph is built, after the subprojects have applied maven-publish.
    dependsOn { subprojects.collectMany { it.tasks.matching { t -> t.name == 'publishAllPublicationsToStagingRepository' } } }
    dependsOn tasks.named('publishAllPublicationsToStagingRepository')
    from stagingRepository
    // Gradle writes maven-metadata.xml into a file repository, and Central
    // builds its own. A signature needs no checksums of its own either.
    exclude '**/maven-metadata.xml*', '**/*.asc.md5', '**/*.asc.sha*'
    archiveFileName = "central-bundle-${version}.zip"
    destinationDirectory = layout.buildDirectory
}
